# Find-My-Joint

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  dataset_5.py  find-my-joint.py  findmyjoint_visualizer.py  index.html  mkdocs.yml  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_request.yml  feature_request.yml
.github/workflows/: deploy.yml  greetings.yml  pypi-publish.yml
docs/: index.md  play-ground.md  quickstart.md
findmyjoint/: __init__.py  core.py  visualizer.py
play-ground/: index.html
quickstart/: index.html
search/: search_index.json
