[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "findmyjoint"
version = "0.0.1"
authors = [
  { name = "Rudra Prasad Bhuyan", email = "rudraprasadbhuyan999@gmial.com" },
]
description = "A utility to find potential join keys (matching columns) across multiple pandas DataFrames."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = ["pandas", "data-analysis", "join", "schema", "visualization", "data-engineering"]
dependencies = [
    "pandas>=1.3",
    "rapidfuzz>=2.0",
    "pyvis>=0.3"
]

[project.urls]
Homepage = "https://github.com/Rudra-G-23/Find-My-Joint"
Issues = "https://github.com/Rudra-G-23/Find-My-Joint/issues"